# hnes

./: .gitignore  README.md  hnes.cabal  stack-lts-14.yaml  stack-lts-16.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: cabal.yml  format.yml  stack.yml
app/: Main.hs
src/: Emulator.hs
src/Emulator/: CPU.hs  Cartridge.hs  Controller.hs  Mapper.hs  Nes.hs  Opcode.hs  PPU.hs  Trace.hs  Util.hs
src/Emulator/Mapper/: Mapper2.hs  Mapper3.hs  Mapper7.hs
test/: Main.hs  SpecHelper.hs
test/Blargg/: Spec.hs
test/Nestest/: Parsing.hs  Spec.hs
