cabal-version:      2.4
name:               hnes
version:            0.1.0.0
homepage:           https://github.com/dbousamra/hnes#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dominic Bou-Samra
copyright:          2017 Dominic Bou-Samra
category:           Web
build-type:         Simple
extra-source-files: README.md

common common
  build-depends:
    , base        >=4.7  && <5
    , bytestring  >=0.10 && <0.12
    , containers  ^>=0.6

  ghc-options:
    -Wall -fno-warn-name-shadowing -fwarn-unused-imports
    -funbox-strict-fields

  default-extensions: Strict
  default-language:   Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , monad-loops  ^>=0.4
    , mtl          ^>=2.2
    , vector       ^>=0.12

  -- cabal-fmt: expand src
  exposed-modules:
    Emulator
    Emulator.Cartridge
    Emulator.Controller
    Emulator.CPU
    Emulator.Mapper
    Emulator.Mapper.Mapper2
    Emulator.Mapper.Mapper3
    Emulator.Mapper.Mapper7
    Emulator.Nes
    Emulator.Opcode
    Emulator.PPU
    Emulator.Trace
    Emulator.Util

executable hnes
  import:        common
  main-is:       app/Main.hs
  build-depends:
    , hnes
    , sdl2  ^>=2.5
    , text  ^>=1.2

  ghc-options:   -O2

test-suite hnes-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , hnes
    , parsec       ^>=3.1
    , tasty        ^>=1.3
    , tasty-hunit  ^>=0.10

  -- cabal-fmt: expand test
  other-modules:
    Blargg.Spec
    Nestest.Parsing
    Nestest.Spec
    SpecHelper